# pia

./: .travis.yml  README.md  pia.cabal
samples/interpretations/: sample1  sample2  sample3  sample4  sample5
samples/trs/: sample1  sample2  sample3  sample4  sample5
src/: Interpretation.hs  PIA.hs  Parser.hs  Polynomial.hs  TRS.hs  Util.hs
src/Parser/: Interpretation.hs  Polynomial.hs  TRS.hs  Util.hs
src/TRS/: Rule.hs  TRS.hs  Term.hs
